# milito-cpp

./: CMakeLists.txt  README.md  main.cpp
config/decks/: AlexandrianMacedonian.h  AncientBritish.h  commonDecks.h
entity/: Card.h  Deck.h  LeaderCard.h  UnitCard.h
